Fixed container to go properly full-width on mobile again.

--- a/scss/_regions/_container.scss
+++ b/scss/_regions/_container.scss
@@ -6,10 +6,13 @@
   @include clearfix();
 
   > .wrapper {
-    padding: $base-spacing;
     position: relative;
-    @include span(12);
-    @include push(2);
+    padding: $base-spacing;
+
+    @include media($tablet) {
+      @include span(12);
+      @include push(2);
+    }
 
     &.-narrow {
       @include media($tablet) {
